--- a/SpeechSignalAnalysisSystem/record.ui
+++ b/SpeechSignalAnalysisSystem/record.ui
@@ -44,7 +44,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
-    <widget class="QRadioButton" name="radioButton">
+    <widget class="QRadioButton" name="constantQualityRadioButton">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -60,7 +60,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QRadioButton" name="radioButton_2">
+    <widget class="QRadioButton" name="constantBitrateRadioButton">
      <property name="geometry">
       <rect>
        <x>30</x>
@@ -230,7 +230,7 @@
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="save_but">
+      <widget class="QPushButton" name="output_but">
        <property name="font">
         <font>
          <pointsize>11</pointsize>
@@ -308,5 +308,38 @@
   </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>constantQualityRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>qualitySlider</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>147</x>
+     <y>325</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>325</x>
+     <y>356</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>constantBitrateRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>bitrateBox</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>147</x>
+     <y>395</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>325</x>
+     <y>426</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
