--- a/SpeechSignalAnalysisSystem/spectrum.ui
+++ b/SpeechSignalAnalysisSystem/spectrum.ui
@@ -66,7 +66,7 @@
      <string>放大</string>
     </property>
    </widget>
-   <widget class="QWidget" name="widget" native="true">
+   <widget class="QCustomPlot" name="specturm_wdo" native="true">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -101,6 +101,14 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
