--- a/SpeechSignalAnalysisSystem/mainwindow.ui
+++ b/SpeechSignalAnalysisSystem/mainwindow.ui
@@ -7,85 +7,64 @@
     <x>0</x>
     <y>0</y>
     <width>1349</width>
-    <height>793</height>
+    <height>861</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QCustomPlot" name="waveform_wid_1" native="true">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>1311</width>
-      <height>311</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QCustomPlot" name="waveform_wid_2" native="true">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>320</y>
-      <width>1311</width>
-      <height>311</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="zoomIn_but">
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>670</y>
-      <width>93</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>放大</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="zoomOut_but">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>670</y>
-      <width>93</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>缩小</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="reset_but">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>670</y>
-      <width>93</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>重置</string>
-    </property>
-   </widget>
-   <widget class="QScrollBar" name="horizontalScrollBar">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>670</y>
-      <width>481</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="1" column="3">
+     <widget class="QScrollBar" name="horizontalScrollBar">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="zoomIn_but">
+      <property name="text">
+       <string>放大</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QPushButton" name="zoomOut_but">
+      <property name="text">
+       <string>缩小</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QPushButton" name="reset_but">
+      <property name="text">
+       <string>重置</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="4">
+     <widget class="QWidget" name="widget" native="true">
+      <layout class="QVBoxLayout" name="verticalLayout" stretch="5">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QGroupBox" name="groupBox">
+         <property name="title">
+          <string>波形图/语谱图</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <widget class="QCustomPlot" name="waveform_wid_1" native="true"/>
+          </item>
+         </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -100,20 +79,9 @@
     <property name="title">
      <string>菜单</string>
     </property>
+    <addaction name="readwav_act"/>
     <addaction name="play_act"/>
     <addaction name="separator"/>
-    <addaction name="periodwind_open_act"/>
-    <addaction name="spectrumwind_open_act"/>
-    <addaction name="filterwind_open_act"/>
-    <addaction name="spectrogram_act"/>
-    <addaction name="freqResp_act"/>
-    <addaction name="winFunc_act"/>
-   </widget>
-   <widget class="QMenu" name="menu_2">
-    <property name="title">
-     <string>打开</string>
-    </property>
-    <addaction name="readwav_act"/>
    </widget>
    <widget class="QMenu" name="menu_3">
     <property name="title">
@@ -128,8 +96,22 @@
     </property>
     <addaction name="windowopen"/>
    </widget>
+   <widget class="QMenu" name="menu_2">
+    <property name="title">
+     <string>分析</string>
+    </property>
+    <addaction name="spectrumwind_open_act"/>
+   </widget>
+   <widget class="QMenu" name="menu_4">
+    <property name="title">
+     <string>频率响应</string>
+    </property>
+    <addaction name="freqResp_act"/>
+    <addaction name="winFunc_act"/>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menu_2"/>
+   <addaction name="menu_4"/>
    <addaction name="menu_3"/>
    <addaction name="newWindow_menu"/>
   </widget>
@@ -184,7 +166,7 @@
   </action>
   <action name="spectrogram_act">
    <property name="text">
-    <string>语谱图</string>
+    <string>语谱分析</string>
    </property>
   </action>
   <action name="freqResp_act">
@@ -195,6 +177,16 @@
   <action name="winFunc_act">
    <property name="text">
     <string>窗口函数</string>
+   </property>
+  </action>
+  <action name="actionp">
+   <property name="text">
+    <string>频谱分析</string>
+   </property>
+  </action>
+  <action name="actionp_2">
+   <property name="text">
+    <string>语谱分析</string>
    </property>
   </action>
  </widget>
