--- a/SpeechSignalAnalysisSystem/winfunc.ui
+++ b/SpeechSignalAnalysisSystem/winfunc.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>821</width>
-    <height>466</height>
+    <width>827</width>
+    <height>453</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,63 +16,121 @@
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QGroupBox" name="groupBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="maximumSize">
       <size>
-       <width>160</width>
+       <width>16777215</width>
        <height>16777215</height>
       </size>
      </property>
      <property name="title">
-      <string>窗口函数</string>
+      <string>窗口函数类型</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QPushButton" name="rect_but">
-        <property name="text">
-         <string>矩形窗</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="han_but">
-        <property name="text">
-         <string>hanning窗</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="ham_but">
-        <property name="text">
-         <string>hamming窗</string>
-        </property>
-       </widget>
-      </item>
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <property name="topMargin">
+       <number>11</number>
+      </property>
+      <property name="bottomMargin">
+       <number>11</number>
+      </property>
+      <item row="4" column="0">
        <widget class="QPushButton" name="kai_but">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
-         <string>Kaiser窗</string>
+         <string>确定</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QPushButton" name="bmh_but">
+      <item row="2" column="0">
+       <widget class="QLabel" name="kai_lab">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
-         <string>BlackmanHarris窗</string>
+         <string>Kaiser参数：</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QPushButton" name="bm_but">
-        <property name="text">
-         <string>Blackman窗</string>
+      <item row="3" column="0">
+       <widget class="QLineEdit" name="kai_edit">
+        <property name="enabled">
+         <bool>false</bool>
         </property>
        </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QComboBox" name="winfunc_Box">
+        <item>
+         <property name="text">
+          <string>请选择窗口类型</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>矩形窗</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>hanning窗</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>hamming窗</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Blackman窗</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>BlackmanHarris窗</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Kaiser窗</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="QCustomPlot" name="winFunc_wid" native="true"/>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QCustomPlot" name="winFunc_wid" native="true"/>
+      </item>
+      <item>
+       <widget class="QCustomPlot" name="winFunc_wid_2" native="true"/>
+      </item>
+     </layout>
+    </widget>
    </item>
   </layout>
  </widget>
