--- a/SpeechSignalAnalysisSystem/mainwindow.ui
+++ b/SpeechSignalAnalysisSystem/mainwindow.ui
@@ -6,37 +6,43 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1349</width>
-    <height>861</height>
+    <width>1279</width>
+    <height>714</height>
    </rect>
+  </property>
+  <property name="mouseTracking">
+   <bool>false</bool>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="3">
+    <item row="2" column="3">
      <widget class="QScrollBar" name="horizontalScrollBar">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="zoomIn_but">
-      <property name="text">
-       <string>放大</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
+    <item row="2" column="1">
      <widget class="QPushButton" name="zoomOut_but">
       <property name="text">
        <string>缩小</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
+    <item row="2" column="0">
+     <widget class="QPushButton" name="zoomIn_but">
+      <property name="text">
+       <string>放大</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="2">
      <widget class="QPushButton" name="reset_but">
       <property name="text">
        <string>重置</string>
@@ -44,24 +50,10 @@
      </widget>
     </item>
     <item row="0" column="0" colspan="4">
-     <widget class="QWidget" name="widget" native="true">
-      <layout class="QVBoxLayout" name="verticalLayout" stretch="5">
-       <property name="spacing">
-        <number>0</number>
-       </property>
-       <item>
-        <widget class="QGroupBox" name="groupBox">
-         <property name="title">
-          <string>波形图/语谱图</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_3">
-          <item>
-           <widget class="QCustomPlot" name="waveform_wid_1" native="true"/>
-          </item>
-         </layout>
-        </widget>
-       </item>
-      </layout>
+     <widget class="QCustomPlot" name="waveform_wid_1" native="true">
+      <property name="mouseTracking">
+       <bool>false</bool>
+      </property>
      </widget>
     </item>
    </layout>
@@ -71,7 +63,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1349</width>
+     <width>1279</width>
      <height>26</height>
     </rect>
    </property>
